drawing function, reset function

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div id="container">
-
+    
+    <div class="top">
+        <button id="generateCanvas">Generate</button>
+        <button id="resetButt5on">Generate</button>
     </div>
+    <div class="display">
+        <div id="container">
+        </div>
+    </div>
+
+
 </body>
 </html>
